[package]
name = "vst3-bindgen"
version = "0.1.1"
authors = ["Micah Johnston <micahrjohnston@gmail.com>"]
edition = "2021"
description = "Binding generator for the VST 3 API"
documentation = "https://coupler.rs/vst3-bindgen/"
repository = "https://github.com/coupler-rs/vst3-bindgen"
license = "MIT OR Apache-2.0"

[dependencies]
com-scrape-types = { path = "com-scrape-types", version = "0.1.0" }

[build-dependencies]
com-scrape = { path = "com-scrape", version = "0.1.1" }

[[example]]
name = "gain"
crate-type = ["cdylib"]

[workspace]
members = [
    "com-scrape",
    "com-scrape-types",
]
