[package]
name = "vst3"
version = "0.2.0"
authors = ["Micah Johnston <micahrjohnston@gmail.com>"]
edition = "2021"
description = "Rust bindings for the VST 3 API"
documentation = "https://coupler.rs/vst3-rs/vst3/"
repository = "https://github.com/coupler-rs/vst3-rs"
license = "MIT OR Apache-2.0"

[dependencies]
com-scrape-types = { path = "com-scrape-types", version = "0.1.1" }

[build-dependencies]
vst3-bindgen = { path = "vst3-bindgen", version = "0.3.0" }

[[example]]
name = "gain"
crate-type = ["cdylib"]

[workspace]
members = [
    "com-scrape",
    "com-scrape-types",
    "vst3-bindgen",
    "vst3-bindgen-cli",
]
