[package]
name = "com-scrape"
version = "0.1.0"
authors = ["Micah Johnston <micahrjohnston@gmail.com>"]
edition = "2021"
description = "Automatically generates Rust bindings for COM interfaces"
repository = "https://github.com/coupler-rs/vst3-bindgen"
license = "MIT OR Apache-2.0"

[dependencies]
clang-sys = { version = "1", features = ["clang_6_0"] }
