[package]
name = "vst3-bindgen"
version = "0.3.0"
authors = ["Micah Johnston <micahrjohnston@gmail.com>"]
edition = "2021"
description = "Binding generator for the VST 3 API"
repository = "https://github.com/coupler-rs/vst3-rs"
license = "MIT OR Apache-2.0"

[dependencies]
com-scrape = { path = "../com-scrape", version = "0.2.0" }
